# kiconthemes

./: .git-blame-ignore-revs  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5IconThemesConfig.cmake.in  KF6IconThemesConfig.cmake.in  README.md  metainfo.yaml
autotests/: CMakeLists.txt  breeze.theme  icontheme.qrc  kiconbutton_unittest.cpp  kicondialog_unittest.cpp  kiconengine_scaled_unittest.cpp  kiconengine_unittest.cpp  kiconloader_benchmark.cpp  kiconloader_rcctest.cpp  kiconloader_resourcethemetest.cpp  kiconloader_unittest.cpp  kicontheme_unittest.cpp  kpixmapsequenceloadertest.cpp  oxygen.theme  resources.qrc
docs/: Doxyfile.local
po/af/: kiconthemes5.po  kiconthemes6.po
po/ar/: kiconthemes5.po  kiconthemes6.po
po/ast/: kiconthemes5.po  kiconthemes6.po
po/az/: kiconthemes5.po  kiconthemes6.po
po/be/: kiconthemes5.po  kiconthemes6.po
po/be@latin/: kiconthemes5.po  kiconthemes6.po
po/bg/: kiconthemes5.po  kiconthemes6.po
po/bn/: kiconthemes5.po  kiconthemes6.po
po/br/: kiconthemes5.po  kiconthemes6.po
po/bs/: kiconthemes5.po  kiconthemes6.po
po/ca/: kiconthemes5.po  kiconthemes6.po
po/ca@valencia/: kiconthemes5.po  kiconthemes6.po
po/cs/: kiconthemes5.po  kiconthemes6.po
po/csb/: kiconthemes5.po  kiconthemes6.po
po/cy/: kiconthemes5.po  kiconthemes6.po
po/da/: kiconthemes5.po  kiconthemes6.po
po/de/: kiconthemes5.po  kiconthemes6.po
po/el/: kiconthemes5.po  kiconthemes6.po
po/en_GB/: kiconthemes5.po  kiconthemes6.po
po/eo/: kiconthemes5.po  kiconthemes6.po
po/es/: kiconthemes5.po  kiconthemes6.po
po/et/: kiconthemes5.po  kiconthemes6.po
po/eu/: kiconthemes5.po  kiconthemes6.po
po/fa/: kiconthemes5.po  kiconthemes6.po
po/fi/: kiconthemes5.po  kiconthemes6.po
po/fr/: kiconthemes5.po  kiconthemes6.po
po/fy/: kiconthemes5.po  kiconthemes6.po
po/ga/: kiconthemes5.po  kiconthemes6.po
po/gd/: kiconthemes5.po  kiconthemes6.po
po/gl/: kiconthemes5.po  kiconthemes6.po
po/gu/: kiconthemes5.po  kiconthemes6.po
po/he/: kiconthemes5.po  kiconthemes6.po
po/hi/: kiconthemes5.po  kiconthemes6.po
po/hr/: kiconthemes5.po  kiconthemes6.po
po/hsb/: kiconthemes5.po  kiconthemes6.po
po/hu/: kiconthemes5.po  kiconthemes6.po
po/ia/: kiconthemes5.po  kiconthemes6.po
po/id/: kiconthemes5.po  kiconthemes6.po
po/is/: kiconthemes5.po  kiconthemes6.po
po/it/: kiconthemes5.po  kiconthemes6.po
po/ja/: kiconthemes5.po  kiconthemes6.po
po/ka/: kiconthemes5.po  kiconthemes6.po
po/kk/: kiconthemes5.po  kiconthemes6.po
po/km/: kiconthemes5.po  kiconthemes6.po
po/ko/: kiconthemes5.po  kiconthemes6.po
po/ku/: kiconthemes5.po  kiconthemes6.po
po/lt/: kiconthemes5.po  kiconthemes6.po
po/lv/: kiconthemes5.po  kiconthemes6.po
po/mai/: kiconthemes5.po  kiconthemes6.po
po/mk/: kiconthemes5.po  kiconthemes6.po
po/ml/: kiconthemes5.po  kiconthemes6.po
po/mr/: kiconthemes5.po  kiconthemes6.po
po/ms/: kiconthemes5.po  kiconthemes6.po
po/nb/: kiconthemes5.po  kiconthemes6.po
po/nds/: kiconthemes5.po  kiconthemes6.po
po/ne/: kiconthemes5.po  kiconthemes6.po
po/nl/: kiconthemes5.po  kiconthemes6.po
po/nn/: kiconthemes5.po  kiconthemes6.po
po/oc/: kiconthemes5.po  kiconthemes6.po
po/pa/: kiconthemes5.po  kiconthemes6.po
po/pl/: kiconthemes5.po  kiconthemes6.po
po/pt/: kiconthemes5.po  kiconthemes6.po
po/pt_BR/: kiconthemes5.po  kiconthemes6.po
po/ro/: kiconthemes5.po  kiconthemes6.po
po/ru/: kiconthemes5.po  kiconthemes6.po
po/sa/: kiconthemes6.po
po/se/: kiconthemes5.po  kiconthemes6.po
po/sk/: kiconthemes5.po  kiconthemes6.po
po/sl/: kiconthemes5.po  kiconthemes6.po
po/sq/: kiconthemes5.po  kiconthemes6.po
po/sr/: kiconthemes5.po  kiconthemes6.po
po/sr@ijekavian/: kiconthemes5.po  kiconthemes6.po
po/sr@ijekavianlatin/: kiconthemes5.po  kiconthemes6.po
po/sr@latin/: kiconthemes5.po  kiconthemes6.po
po/sv/: kiconthemes5.po  kiconthemes6.po
po/ta/: kiconthemes5.po  kiconthemes6.po
po/tg/: kiconthemes5.po  kiconthemes6.po
po/th/: kiconthemes5.po  kiconthemes6.po
po/tr/: kiconthemes5.po  kiconthemes6.po
po/ug/: kiconthemes5.po  kiconthemes6.po
po/uk/: kiconthemes5.po  kiconthemes6.po
po/uz/: kiconthemes5.po  kiconthemes6.po
po/uz@cyrillic/: kiconthemes5.po  kiconthemes6.po
po/vi/: kiconthemes5.po  kiconthemes6.po
po/wa/: kiconthemes5.po  kiconthemes6.po
po/x-test/: kiconthemes5.po
po/xh/: kiconthemes5.po  kiconthemes6.po
po/zh_CN/: kiconthemes5.po  kiconthemes6.po
po/zh_TW/: kiconthemes5.po  kiconthemes6.po
src/: CMakeLists.txt  DarkModeSetup.cpp  DarkModeSetup.h  Messages.sh  config.h.in  debug.cpp  debug.h  kfonticontheme.cpp  kfonticontheme.h  kiconbutton.cpp  kiconbutton.h  kiconcolors.cpp  kiconcolors.h  kicondialog.cpp  kicondialog.h  kicondialog_p.h  kicondialogmodel_p.h  kiconeffect.cpp  kiconeffect.h  kiconengine.cpp  kiconengine.h  kiconengineplugin.cpp  kiconengineplugin.json  kiconengineplugin.json.cmake  kiconloader.cpp  kiconloader.h  kiconloader_p.h  kicontheme.cpp  kicontheme.h  kicontheme_p.h  kiconthemes-index.qdoc  kiconthemes.qdoc  kiconthemes.qdocconf  kquickiconprovider.h
src/designer/: CMakeLists.txt
src/qml/: CMakeLists.txt  icondialog.cpp  icondialog_p.h  plugin.cpp
src/tools/kiconfinder/: CMakeLists.txt  kiconfinder.cpp
src/tools/ksvg2icns/: CMakeLists.txt  ksvg2icns.cpp
src/tools/ksvg2ico/: CMakeLists.txt  ksvg2ico.cpp  qicohandler.cpp  qicohandler.h
src/widgets/: CMakeLists.txt  kiconbutton.cpp  kiconbutton.h  kicondialog.cpp  kicondialog.h  kicondialog_p.h  kicondialogmodel_p.h  kiconwidgets.qdoc  kiconwidgets.qdocconf  kpixmapsequenceloader.cpp  kpixmapsequenceloader.h
tests/: CMakeLists.txt  kiconbuttontest.cpp  kicondialogtest.cpp  kiconeffecttest.cpp  kiconeffecttest.h  kiconloadertest.cpp
